export interface QualificationDto {
    idCode: string;
    qualificationName: string;
}